# penathon

./: .gitignore  .gitmodules  CodeGenerator.py  Preprocessor.py  README.md  Typer.py  base.py  exp.py  inferer.py  main.py  out  preprocessor.py  pyproject.toml  sample.py
penathon/: CodeGenerator.py  Constant.py  Helper.py  Inferer.py  SymTable.py  SymTableEntry.py  TypeWrapper.py  Typer.py
penathon-ext/: CHANGELOG.md  README.md  package.json
penathon-ext/src/: extension.ts
samples/: dict.py  fib.py  import.py  import_from.py  list.py  multiple_assignments.py  nested_func.py  number.py  samples.py  set.py  test_grammar.py  tuple.py  use_object.py
tests/advanced/: LazyFunctionInfer.py
tests/basic/: Class.py  ClassDef.py  ClassInstance.py  ClassSelf.py  Function.py  List.py  NestedCall.py  Try.py  TypeCoercion.py  UnionFunctionBody.py  UnionFunctionCall.py  While.py
