[tool.poetry]
name = "penathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
astor = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
rope = "^0.16.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
